agregando animaciones al index

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h2 {
     border: double;
     border-color:black;
 }
-.texto {
+.texto.animate__animated.animate__slow.animate__zoomIn {
     font-family: 'Nunito', sans-serif;
     font-weight: 500;
     color:rgb(0, 0, 0);
@@ -70,7 +70,7 @@ h2 {
     margin-left: 40px;
     transition: transform .6s;
 }
-.texto:hover{
+.texto.animate__animated.animate__slow.animate__zoomIn:hover{
   transform: scale(1.1);
 }
 .familia{
